<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:iconTint="?attr/colorOnPrimary"
        android:title="@string/title_action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="?attr/colorOnPrimary"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:iconTint="?attr/colorOnPrimary"
        android:title="@string/title_action_filter"
        app:iconTint="?attr/colorOnPrimary"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_init_data"
        android:icon="@drawable/ic_add_data_24"
        android:iconTint="?attr/colorOnPrimary"
        android:title="@string/title_action_add_data"
        app:iconTint="?attr/colorOnPrimary"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_clear_db"
        android:icon="@drawable/ic_del_all_24"
        android:iconTint="?attr/colorOnPrimary"
        android:title="@string/title_action_delete"
        app:iconTint="?attr/colorOnPrimary"
        app:showAsAction="collapseActionView" />

</menu>