<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/item_add_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            style="@style/Theme.PotatoHandbook.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/item_add_margin"
            android:hint="@string/potato_name_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:nextFocusForward="@id/description"
                android:textAppearance="?attr/textAppearanceCaption" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description"
            style="@style/Theme.PotatoHandbook.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/item_add_margin"
            android:hint="@string/potato_description_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="3"
                android:maxLines="10"
                android:nextFocusForward="@id/imageUrl" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/imageUrl"
            style="@style/Theme.PotatoHandbook.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/item_add_margin"
            android:hint="@string/potato_add_image_url_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textUri"
                android:nextFocusForward="@id/addPotatoButton" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addPotatoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/button_margin"
            android:enabled="false"
            android:text="@string/add_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageUri" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
